# rust-chat-consumer

./: Cargo.toml  Dockerfile.local
config/: docker.toml
src/: main.rs
