[package]
name = "consume"
version = "0.1.0"
description = "A service which accepts messages from the client, and publishes to Kafka."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
message = { git = "https://github.com/rdeanmcdonald/rust-chat-message" }
rdkafka = { version = "0.28", features = ["cmake-build"] }
redis = { version = "0.21", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
config = "0.13.1"
